--- a/index.html
+++ b/index.html
@@ -35,11 +35,8 @@
         </div>
     </nav>
 
-
     <header class="header">
-        <div class=" header__hero-image">
-            <img src="./assets/images/img-1.png" alt="coffee-shop">
-        </div>
+            <img src="./assets/images/img-1.png" alt="coffee-shop">  
         <div class="header__stats">
             <div class="header__stats--cont">
                 <h2>+50</h2>
@@ -55,14 +52,14 @@
             </div>
         </div>
         <div class="header__title">
-            <h1>Café Agere</h1>
+            <h1>Café <br>Agere</h1>
             <p>Coffee Shop</p>
         </div>
         <div class="header__arrow">
             <div class="header__arrow--red">
                 <i class="fa-solid fa-arrow-right"></i>
             </div>
-            <div class="header__arrow--yelow"></div>
+            <div class="header__arrow--yellow"></div>
         </div>
     </header>
 
@@ -75,10 +72,13 @@
         </div>
         <div class="location__map">
             <img src="./assets/images/img-4.png" alt="map">
+            <div class="location__map--lightblue"></div>
         </div>
         <div class="location__image">
-            <img src="./assets/images/img-2.png" class="coffee-machine" alt="coffee-machine">
-            <img src="./assets/images/img-3.png" class="coffee-beans" alt="coffee-beans">
+            <img src="./assets/images/img-2.png" class="location__coffee-machine" alt="coffee-machine">
+            <div class="location__beans-content">
+            <img src="./assets/images/img-3.png" class="location__coffee-beans" alt="coffee-beans">
+        </div>
         </div>
     </section>
 
